--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ html, body {
     background: linear-gradient(to right, #3f4c6b, #606c88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
 }
 
+.container {
+    position: relative;
+    min-height: 100vh
+}
+
 h1, h2, p, figcaption{
     color: #fff;
 }
@@ -42,7 +47,7 @@ h1, h2, p, figcaption{
     font-size: 1.5em;
     margin: 30px 0;
     padding: 5px;
-    width: 130px;
+    width: 124px;
     background: linear-gradient(
                 to bottom, var(--mainColor) 0%,
                 var(--mainColor) 100%
@@ -54,8 +59,16 @@ h1, h2, p, figcaption{
  transition: background-size .3s;
 }
 
+.main-title.blog {
+    width: 124px;
+}
+
+.main-title.who {
+    width: 75px;
+}
+
 .main-title:hover {
-    background-size: 4px 30px;
+    background-size: 4px 40px;
     color: rgb(44, 44, 44);
 }
 
@@ -69,10 +82,39 @@ h1, h2, p, figcaption{
 
 footer {
     padding: 30px;
-    color: #fff;
-    background: #232526;
+    background: #fff;
     text-align: center;
     border-radius: 10px 10px 0 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.svg-icons {
+    width: 20px;
+    margin: 0 10px;
+}
+
+.who-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px 1px;
+    grid-template-areas: "." ".";
+    justify-items: left;
+    padding: 0 0 20px 0;
+}
+
+.who-profile-pic {
+    width: 100%;
+    height: 280px;
+}
+
+.who-icons .svg-icons {
+    margin: 5px 10px;
+    width: 30px;
+}
+
+.txt-who-icon {
+    color: aliceblue;
 }
 
 
