--- a/css/blogPost.css
+++ b/css/blogPost.css
@@ -1,13 +1,14 @@
 .post-container {
-    display: flex;
+  display: flex;
 	flex-direction: column;
 	flex-wrap: nowrap;
 	justify-content: flex-start;
-    text-align: center;
+  text-align: center;
+  text-align:justify
 }
 
 .post-container .post-title {
-    margin: 20px 0 30px 0;
+  margin: 20px 0 30px 0;
 
 }
 
@@ -30,33 +31,41 @@
   }
   
   @keyframes move {
-    from {
-      background-position: 0px;
-    }
-    to {
-      background-position: 1000px;
-    }
+  from {
+    background-position: 0px;
+  }
+  to {
+    background-position: 1000px;
+  }
   
 }
 
 .author-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    box-shadow: 3px 8px 16px #2e2e2e;
-    border-radius: 20px;
-    padding: 5%;
-    margin: 30px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  box-shadow: 3px 8px 16px #2e2e2e;
+  border-radius: 20px;
+  padding: 5%;
+  margin: 30px 0;
 }
 
 .author-info .author-avatar .profile-pic {
-    width: 80px;
-    height: 80px;
-    margin-right: 30px;
+  width: 80px;
+  height: 80px;
+  margin-right: 30px;
 }
 
 .author-bio {
-    margin-bottom: 0 !important;
-    font-size: 12px;
+  margin-bottom: 0 !important;
+  font-size: 12px;
+}
+
+.center-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
