--- a/css/media.css
+++ b/css/media.css
@@ -98,6 +98,14 @@
   
   .who-profile-pic {
     width: 50%;
-    max-height: 100%;
+    min-height: 500px;
+  }
+
+  .author-info {
+    padding: 3%;
+  }
+
+  .cover-img {
+    text-align: center;
   }
 }
