--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,9 @@ html, body {
 
 .container {
     position: relative;
-    min-height: 100vh
 }
 
-h1, h2, p, figcaption{
+h1, h2, h3, h4, p, figcaption{
     color: #fff;
 }
 .about-me {
@@ -103,8 +102,8 @@ footer {
 }
 
 .who-profile-pic {
-    width: 100%;
-    height: 280px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .who-icons .svg-icons {
@@ -114,6 +113,11 @@ footer {
 
 .txt-who-icon {
     color: aliceblue;
+}
+
+.author-bio {
+    font-weight: bold;
+    font-style: italic;
 }
 
 footer .input-group {
