--- a/css/blogPost.css
+++ b/css/blogPost.css
@@ -4,7 +4,7 @@
 	flex-wrap: nowrap;
 	justify-content: flex-start;
   text-align: center;
-  text-align:justify
+  text-align:justify;
 }
 
 .post-container .post-title {
