--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@ html, body {
     background: linear-gradient(to right, #3f4c6b, #606c88); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
 }
 
+footer a {
+    text-decoration: none; 
+    color: #000 !important;
+    padding: 10px 0;
+}
+
 .container {
     position: relative;
 }
@@ -38,6 +44,10 @@ h1, h2, h3, h4, p, figcaption{
     margin: 20px 0;
 }
 
+.card-holder {
+    padding: 0 0 20px 0;
+}
+
 :root {
     --mainColor: #fff;
 }
@@ -59,6 +69,11 @@ h1, h2, h3, h4, p, figcaption{
 
 .main-title.blog {
     width: 124px;
+}
+
+.about-me-text {
+    text-align:justify;
+
 }
 
 .main-title.who {
